--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>
             I love web development! Since beginning my journey of learning
             software engineering, I have built many projects that demonstrate
-            my knowledge of Javascript, HTML, CSS, Bootstrap, DJANGO, Python,
+            my knowledge of Javascript, HTML, CSS, Bootstrap, Python, Django,
             Unreal Engine 4, and more! Here is a link to my GitHub portfolio
             containing my live projects.
           </p>
